# gm-tty

./: .gitignore  Cargo.toml  README.md
crates/gm-tty-agent/: Cargo.toml
crates/gm-tty-agent/src/: main.rs  reconnect.rs
crates/gm-tty-protocol/: Cargo.toml
crates/gm-tty-protocol/src/: lib.rs
crates/gm-tty-server/: Cargo.toml
crates/gm-tty-server/src/: auth.rs  config.rs  lib.rs  main.rs
docs/: index.html  style.css
frontend/: index.html  main.js
