[package]
name = "gm-tty-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gm-tty-server"
path = "src/main.rs"

[dependencies]
gm-tty-protocol = { path = "../gm-tty-protocol" }
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
tower-http.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
hex.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
